# ung-dataverktoey

./: .gitignore  .pre-commit-config.yaml  README.md  db.py  pyproject.toml  requirements.txt  setup.py
datatools/: datafortelling.py  db.py  github.py  oppdater_datafortelling.py  secrets.py
src/ung_dataverktoey/: secrets.py
src/ung_dbverktoey/: datafortelling.py  db.py  hemmeligheter.py  sharepoint.py
src/ung_mlverktoey/: prompts.py  sentiment.py
src/ung_plotteverktoey/: data.py  plots.py
