[project]
name = "ung-dataverktoey"
version = "0.7.0"
description = "Lokal pythonpakke for databehandlingsverktøy"
readme = "README.md"
authors = [
    { name = "team nav ung", email = "eirik.duesund.helland@nav.no" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "db-dtypes>=1.3.0",
    "google-cloud-bigquery-storage>=2.27.0",
    "google-cloud-bigquery>=3.27.0",
    "setuptools>=75.4.0",
    "gcloud-config-helper>=0.3.1",
    "google-cloud-secret-manager>=2.21.0",
    "highcharts-core>=1.10.2",
    "pypalettes>=0.1.4",
    "msal>=1.31.1",
    "openpyxl>=3.1.5",
    "oracledb>=2.5.1",
]

[project.optional-dependencies]
ml = [
    "langchain-community>=0.3.10",
    "langchain>=0.3.10",
    "langchain-ollama>=0.2.1",
    "langchain-core>=0.3.22",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/ung_dbverktoey",
    "src/ung_plotteverktoey",
    "src/ung_mlverktoey"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nbstripout>=0.8.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.3",
]

[tool.uv.sources]
ung-dataverktoey = { workspace = true }

